# WeiLin-Comfyui-Tools

./: .gitignore  README.md  README_EN.md  __init__.py  install_request.py  package.json  pyproject.toml  requirements.txt  run_panel.py  tag_labels.json  user_cloud_package.json  如何运行后台面板.txt
.github/workflows/: publish.yml
app/server/: launch.py  prompt_server.py
app/server/ai_server/: siliconflow.py
app/server/ai_translator/: ai_translator.py
app/server/cloud_warehouse/: save_history.py  warehouse.py
app/server/dao/: dao.py
app/server/fast_autocomplete/: autocomplete.py
app/server/history/: collect_history_contl.py  history_contl.py
app/server/panel_server/: server_init.py  tag_manager.py  ymal_utils.py
app/server/prompt_api/: comfyui_workflow.py  danbooru.py  lora_info.py  lora_networks.py  random_tag_template.py  tag_image_manager.py  tag_image_queue.py  tags_manager.py
app/server/translate/: api_translate.py  local_translate.py  openai_translate.py
app/server/user_init/: user_init.py
docs/superpowers/plans/: 2026-06-06-tag-preview-image-plan.md
docs/superpowers/specs/: 2026-06-06-tag-preview-image-design.md
js_node/: weilin_fix.css  weilin_prompt_ui_node.js
lora_userdatas/info/: civitai.e830decc8363884f237b118d2cf12e19a00684becfbdf944616f93ea93da46a3.json  civitai.f35fec6f8753419a74e3ca52905ad1d902188d718340184121beb33046da8d8d.json  metadata.e830decc8363884f237b118d2cf12e19a00684becfbdf944616f93ea93da46a3.json  metadata.f35fec6f8753419a74e3ca52905ad1d902188d718340184121beb33046da8d8d.json
panel_web/: index.html
src/: index.html  package.json  pnpm-lock.yaml
src/src/: .gitignore  App.vue  main.js  package-lock.json  package.json  vite.config.js
src/src/api/: ai_server.js  autocomplete.js  cloud.js  danbooru.js  history.js  language.js  lora.js  openai.js  random_tag.js  request.js  tags.js  translator.js
src/src/components/: Dialog.vue  DraggableWindow.vue  FloatingBall.vue  LanguageSwitcher.vue  ThemeSwitch.vue  tranToWeb.vue
src/src/i18n/: index.js
src/src/stores/: tagStore.js
src/src/styles/: theme.css
src/src/utils/: message.js  message.vue  version.js  windowManager.js
tags_templete/: zh_CN.json
(+30 files in other folders)
